--- a/views/index.jade
+++ b/views/index.jade
@@ -11,11 +11,17 @@ body(ng-app='mirror')
     .box.top.left
       each item in config.LAYOUT.topLeft
         #{item} Loading..
+    .box.top.center
+      each item in config.LAYOUT.topCenter
+        #{item} Loading..
     .box.top.right
       each item in config.LAYOUT.topRight
         #{item} Loading..
     .box.bottom.left
       each item in config.LAYOUT.bottomLeft
+        #{item} Loading..
+    .box.bottom.center
+      each item in config.LAYOUT.bottomCenter
         #{item} Loading..
     .box.bottom.right
       each item in config.LAYOUT.bottomRight
