--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,12 @@
 /*Layout*/
 body, html {
     background: #000;
-    padding: 0 5%;
+    padding: 5%;
     margin: 0;
     height: 100%;
     /*width: 100%;*/
 
-    font-family: "Dosis";
+    font-family: "Arial Black";
     letter-spacing: -2px;
     color: #fff;
     font-size: 30px;
@@ -24,6 +24,23 @@ body {
     width: 33%;
 }
 
+.right {
+    text-align: right;
+    width: 30%;
+    padding-left: 30px;
+}
+
+.left {
+    text-align: left;
+    width: 30%;
+    padding-right: 30px;
+}
+
+.center {
+    text-align: center;
+    padding: 0 30px;
+}
+
 .box.top {
     top: 0;
 }
@@ -37,8 +54,8 @@ body {
 }
 
 .box.center {
-    left: 33.3%;
-    text-align: center
+    left: 30%;
+    width: 40%;
 }
 
 .box.bottom {
