--- a/reasonSober/reasonSober.css
+++ b/reasonSober/reasonSober.css
@@ -4,12 +4,14 @@
 }
 
 .reasons-sober h3 {
-    margin-bottom: 15px;
-    font-size: 56px;
+    margin-bottom: 48px;
+    font-size: 36px;
+    font-weight: bolder;
+    border-bottom: 1px solid white;
 }
 
 .reason-sober {
-    padding-bottom: 20px;
-    font-size: 36px;
+    padding-bottom: 48px;
+    font-size: 48px;
     line-height: 1;
 }
