Make color a bit softer

--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
   background: #000;
   font-family: "Dosis";
   letter-spacing: -2px;
-  color: #fff;
+  color: #e8e8e8;
   font-size: 30px;
   font-weight: 200;
   -webkit-font-smoothing: antialiased;
